--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>GRA 321</title>
+ <title>Sela Britton - GRA 321</title>
 </head>
+<body>
+    <h1>GRA 321 Course Website</h1>
+    <h2> Sela Britton</h2>
+    <ul>
+    <li> Project 1 </li>
+    <li> Project 2 </li>
+    <l1> Project 3 </l1>
+    </ul>
     
+
+    </body>
+</html>
