--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <ul>
     <li> Project 1 </li>
     <li> Project 2 </li>
-    <l1> Project 3 </l1>
+    <l1> <a href="project3/index.html" title="Project 3">Project 3</a> </l1>
     </ul>
-    
 
-    </body>
+</body>
 </html>
