--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul>
     <li> Project 1 </li>
     <li> Project 2 </li>
-    <l1> <a href="project3/index.html" title="Project 3">Project 3</a> </l1>
+    <l1> <a href="Project 3/index.html" title="Project 3">Project 3</a> </l1>
     </ul>
 
 </body>
