--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <ul>
     <li> Project 1 </li>
     <li> Project 2 </li>
-    <l1> <a href="Project3/index.html" title="Project 3">Project 3</a> </l1>
+    <li> <a href="Project3/index.html" title="Project 3">Project 3</a> </li>
     </ul>
-
 </body>
 </html>
