--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <li> Project 1 </li>
     <li> Project 2 </li>
     <li> <a href="Project3/index.html" title="Project 3">Project 3</a> </li>
+    <li> <a href="project4/index.html" title="Project 4">Project 4</a> </li>
+    <li> <a href="Project5/index.html" title="Project 5">Project 5</a> </li>
     </ul>
 </body>
 </html>
