--- a/project4/index.html
+++ b/project4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Fictive Kin - Purpose</title>
-    <link rel="stylesheet" href="https://use.typekit.net/ptd7dhx.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
