--- a/project4/index.html
+++ b/project4/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Fictive Kin - Purpose</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900i&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
