--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li> <a href="Project3/index.html" title="Project 3">Project 3</a> </li>
     <li> <a href="project4/index.html" title="Project 4">Project 4</a> </li>
     <li> <a href="Project5/index.html" title="Project 5">Project 5</a> </li>
+    <li> <a href="Charlies/index.html" title="Charlies">Charlie's</a> </li>
     </ul>
 </body>
 </html>
