--- a/new/newindex.html
+++ b/new/newindex.html
@@ -4,8 +4,28 @@
     <title>Charlie's Cafe</title>
     <link rel="stylesheet" href="https://use.typekit.net/ptd7dhx.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-    <meta name='viewport' content="width=device-width'>"
-</head>                                                                 <body>
+</head>                                                     
+<body>
+    <div class="container">  
+    <img src="img/milk.jpg" alt="coffee milk"/>
+        <div class="title">
+        <h1>Charlie's Cafe</h1></div>
+    
+    <div class="container" id="menu-wrapper">
+        <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Specials</a></li>
+        <li><a href="#">Menu</a></li>
+        <li><a href="#">Location</a></li>
+        <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+</div>
+
+<div class="about">
+    <h2>Charlie's is a high quality coffee shop that prides itself on fresh ingredients and fast service to students. </h2>
+</div>
+
 <ul class="list">
   <li>
     <div class="product">
