--- a/new/newindex.html
+++ b/new/newindex.html
@@ -4,9 +4,8 @@
     <title>Charlie's Cafe</title>
     <link rel="stylesheet" href="https://use.typekit.net/ptd7dhx.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-</head>                                                     
-<body>
-    <div class="container">  
+</head>            s                                         
+<body>  
     <img src="img/milk.jpg" alt="coffee milk"/>
         <div class="title">
         <h1>Charlie's Cafe</h1></div>
@@ -26,7 +25,7 @@
     <h2>Charlie's is a high quality coffee shop that prides itself on fresh ingredients and fast service to students. </h2>
 </div>
 
-<ul class="list">
+ul class="list">
   <li>
     <div class="product">
       <h4>Product Title</h4>
