--- a/Charlies/index.html
+++ b/Charlies/index.html
@@ -4,7 +4,7 @@
     <title>Charlie's Cafe</title>
     <link rel="stylesheet" href="https://use.typekit.net/ptd7dhx.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-    <meta name='viewport' content="width=device-width'>"
+    <meta name='viewport' content="width=device-width'>"/>
 </head>                                                                       
                                                                                  
 <body>
@@ -99,24 +99,23 @@
 
 <div class="footer">                                      
 
-<div class="footer" id= "locations">
+<div class="footer-wrapper" id= "locations">
     <div class="footer" id="Hayden">
-    Charlie’s Cafe Hayden Library
-    <p>Monday - Thursday 7 am - 5 pm
+    <p>Charlie’s Cafe Hayden Library</p>
+    <p>Monday - Thursday 7 am - 5 pm</p>
     <p>Fridays 7 am - 2 pm
     </div>
     
     <div class="footer" id= "Bio">   
-        <p>Charlie’s Cafe Bio Design
-        <p>Monday - Thursday   7 am - 4 pm
-        <p>Fridays             7 am - 2 pm  
+        <p>Charlie’s Cafe Bio Design</p>
+        <p>Monday - Thursday   7 am - 4 pm</p>
+        <p>Fridays             7 am - 2 pm</p>
     </div>                                        
 
     <div class="footer" id="north">
-        Charlie’s Cafe Design North
-
-        <p>Monday - Thursday   7 am - 7 pm
-        <p>Fridays             7 am - 4 pm
+        <p>Charlie’s Cafe Design North</p>
+        <p>Monday - Thursday   7 am - 7 pm</p>
+        <p>Fridays             7 am - 4 pm</p>
     </div>
 </div>
 </div>                                        
