--- a/new/newindex.html
+++ b/new/newindex.html
@@ -4,7 +4,7 @@
     <title>Charlie's Cafe</title>
     <link rel="stylesheet" href="https://use.typekit.net/ptd7dhx.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-</head>            s                                         
+</head>                                       
 <body>  
     <img src="img/milk.jpg" alt="coffee milk"/>
         <div class="title">
@@ -19,13 +19,12 @@
         <li><a href="#">Contact</a></li>
         </ul>
     </div>
-</div>
 
 <div class="about">
     <h2>Charlie's is a high quality coffee shop that prides itself on fresh ingredients and fast service to students. </h2>
 </div>
 
-ul class="list">
+<ul class="list">
   <li>
     <div class="product">
       <h4>Product Title</h4>
