--- a/Charlies/index.html
+++ b/Charlies/index.html
@@ -4,7 +4,7 @@
     <title>Charlie's Cafe</title>
     <link rel="stylesheet" href="https://use.typekit.net/ptd7dhx.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
-    <meta name='viewport' content="width=device-width'>"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>                                                                       
                                                                                  
 <body>
@@ -25,7 +25,7 @@
     </div>
 
 <div class="about"><h2>Charlie's is a high quality coffee shop that prides itself on fresh ingredients and fast service to students. </h2></div>
- <div class="menu"   
+ <div class="menu">   
  <h3>Hot Drinks</h3>   
     <p>Drip Coffee  ………………………………………………………………………………………………………………………………………………………………………………   1.95 / 2.25 / 2.50
     <p>Espresso  ………………………………………………………………………………………………………………………………………………………………………………………   1.95 / 2.50 / 3.00
