--- a/new/newindex.html
+++ b/new/newindex.html
@@ -320,7 +320,7 @@
           <p class="price">$2.50</p>
         </div>
         </li>
-    <li>
+        <li>
         <div class="product">
           <h4>Blueberry Bagel</h4>
           <p class="description"></p>
@@ -328,7 +328,7 @@
         <div class="prices">
           <p class="price">$2.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Cinnamon Raisin Bagel</h4>
@@ -337,7 +337,7 @@
         <div class="prices">
           <p class="price">$2.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Jalapeno Asiago Bagel</h4>
@@ -355,7 +355,7 @@
         <div class="prices">
           <p class="price">$2.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Swiss and Spinach Croissant</h4>
@@ -364,7 +364,7 @@
         <div class="prices">
           <p class="price">$2.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Waffles</h4>
@@ -375,9 +375,9 @@
         </div>
         </li>
         <h2>Lunch</h2>
-      <li>
+        <li>
         <h4>Paninis</h4>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Italiano</h4>
@@ -386,7 +386,7 @@
         <div class="prices">
           <p class="price">$6.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Seville</h4>
@@ -404,7 +404,7 @@
         <div class="prices">
           <p class="price">$6.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Caprese</h4>
@@ -413,7 +413,7 @@
         <div class="prices">
           <p class="price">$6.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Turkey Florentine</h4>
@@ -431,7 +431,7 @@
         <div class="prices">
           <p class="price">$6.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Mediterrnean Chicken</h4>
@@ -440,7 +440,7 @@
         <div class="prices">
           <p class="price">$6.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Chicken Tikka Masala</h4>
@@ -450,7 +450,7 @@
           <p class="price">$6.50</p>
         </div>
         </li>
-    <li>
+        <li>
         <div class="product">
           <h4>Vegetable Korma</h4>
           <p class="description"></p>
@@ -458,7 +458,7 @@
         <div class="prices">
           <p class="price">$6.50</p>
         </div>
-      </li>
+        </li>
         <li>
         <div class="product">
           <h4>Cajun Chicken Salad</h4>
@@ -467,7 +467,7 @@
         <div class="prices">
           <p class="price">$7.50</p>
         </div>
-      </li>
+        </li>
     </ul>
     
     <div class="footer">                                      
@@ -489,7 +489,7 @@
             <p>Monday - Thursday: 7 am - 7 pm</p>
             <p>Friday: 7 am - 4 pm</p>
         </div>
-        <div>
+        <div class="contact-info">
             ph: 480-338-6413 <br>
             ig: @charliescafe <br>
             
