--- a/new/newindex.html
+++ b/new/newindex.html
@@ -4,6 +4,7 @@
     <title>Charlie's Cafe</title>
     <link rel="stylesheet" href="https://use.typekit.net/ptd7dhx.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head> 
     
 <body>  
