--- a/new/newindex.html
+++ b/new/newindex.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="about">
-        Charlie's is a high quality coffee shop that prides itself on fresh ingredients and fast service to students.
+        <h2>Charlie's is a high quality coffee shop that prides itself on fresh ingredients and fast service to students. </h2>
     </div>
     
     <ul class="list">
