--- a/new/newindex.html
+++ b/new/newindex.html
@@ -474,21 +474,21 @@
     <div class="footer">                                      
     <div class="footer-wrapper">
         <div class="footer" id="Hayden">
-        <p>Charlie’s Cafe Hayden Library</p>
-        <p>Monday - Thursday: 7 am - 5 pm</p>
-        <p>Friday: 7 am - 2 pm
+        <p>Hayden Library</p>
+        <p>Mon - Thurs: 7 am - 5 pm</p>
+        <p>Fri: 7 am - 2 pm
         </div>
 
         <div class="footer" id= "Bio">   
-            <p>Charlie’s Cafe Bio Design</p>
-            <p>Monday - Thursday: 7 am - 4 pm</p>
-            <p>Friday: 7 am - 2 pm</p>
+            <p>Bio Design</p>
+            <p>Mon - Thurs: 7 am - 4 pm</p>
+            <p>Fri: 7 am - 2 pm</p>
         </div>                                        
 
         <div class="footer" id="north">
-            <p>Charlie’s Cafe Design North</p>
-            <p>Monday - Thursday: 7 am - 7 pm</p>
-            <p>Friday: 7 am - 4 pm</p>
+            <p>Design North</p>
+            <p>Mon - Thurs: 7 am - 7 pm</p>
+            <p>Fri: 7 am - 4 pm</p>
         </div>
         <div class="contact-info">
             ph: 480-338-6413 <br>
