--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li> <a href="project4/index.html" title="Project 4">Project 4</a> </li>
     <li> <a href="Project5/index.html" title="Project 5">Project 5</a> </li>
     <li> <a href="Charlies/index.html" title="Charlies">Charlie's</a> </li>
-    <li> <a href="new/newindex.html" title="mobileCharlies">Mobile Charlie's</a> </li>
+    <li> <a href="new/newindex.html" title="mobileCharlies">Charlie's Final Version</a> </li>
     </ul>
 </body>
 </html>
